# rime

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  devenv.nix  flake.nix
.github/workflows/: build.yml
src/: handler.rs  home_manager.rs  main.rs  nixos.rs  nixpkgs.rs  nvf.rs  tools.rs
