[package]
name = "rime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
rust-mcp-macros = "0.5.1"
rust-mcp-sdk = "0.5.2"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = "1.47.1"
ureq = { version = "2.9.7", features = ["tls"] }
clap = { version = "4.5.18", features = ["derive"] }
