[package]
name = "rime"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
rust-mcp-macros = "0.8.0"
rust-mcp-sdk = { version = "0.8.1", default-features = false, features = ["server", "macros", "stdio", "hyper-server", "streamable-http", "sse"] }
serde = "1.0.219"
serde_json = "1.0.142"
tokio = "1.47.1"
ureq = { version = "2.9.7", features = ["tls"] }
clap = { version = "4.5.18", features = ["derive"] }
